FullQa New/src/PS Enterprise/objects/Timecard__c.object
<CustomObject>
    <fields>
        <fullName>Override_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Group to which the TC Split &apos;s Cost Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Group to which the TC Split &apos;s Cost Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Cost Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Override Cost Group For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Cost_Group_For_Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Cost_Practice_Currency_Code__c</fullName>
        <label>Override Cost Practice Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Practice to which the TC Split &apos;s Cost Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Practice to which the TC Split &apos;s Cost Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Cost Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Override Cost Practice For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Cost_Practice_For_TC_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Cost_Region_Currency_Code__c</fullName>
        <label>Override Cost Region Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Region to which the TC Split &apos;s Cost Transactions will roll up for Regional Actuals, even if its Project or Resource are in a different Region. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Region to which the TC Split &apos;s Cost Transactions will roll up for Regional Actuals, even if its Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Cost Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Override Cost Region For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Cost_Region_For_Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Group_Currency_Code__c</fullName>
        <label>Override Revenue Group Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Group to which the TC Split &apos;s Revenue Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Group to which the TC Split &apos;s Revenue Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Revenue Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Override Revenue Group For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Revenue_Group_For_TC_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Practice_Currency_Code__c</fullName>
        <label>Override Revenue Practice Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Practice to which the TC Split &apos;s Revenue Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Practice to which the TC Split &apos;s Revenue Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Revenue Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Override Revenue Practice For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Revenue_Practice_For_TC_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Region_Currency_Code__c</fullName>
        <label>Override Revenue Region Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Region to which the TC Split &apos;s Revenue Transactions will roll up for Regional Actuals, even if its Project or Resource are in a different Region. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Region to which the TC Split &apos;s Revenue Transactions will roll up for Regional Actuals, even if its Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Revenue Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Override Revenue Region For Timecard Splits</relationshipLabel>
        <relationshipName>Override_Revenue_Region_For_TC_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Exchange_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard Split</description>
        <inlineHelpText>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard Split</inlineHelpText>
        <label>Project Exchange Rate</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>TimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>TimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Timecard Split (Revenue Transaction)</relationshipLabel>
        <relationshipName>RevenueForTimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday_Notes__c</fullName>
        <label>Saturday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_Notes__c</fullName>
        <label>Sunday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronous_Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is for system use.  It is intended to be checked in conjunction with any insert/update of the Timecard Split executed within a future method, and will then ensure that no downstream future methods are called.  In Salesforce, a future method can&apos;t call another future method.  Triggers should then unset this checkbox so that it never remains checked persistently.

Danger:  only check this flag for changes NOT on the &quot;critical&quot; path with respect to governor limits.  For example, it is ok to check this flag if the only change to the Timecard Split is to modify the Billed/Invoiced flags and the Billing Event Item lookup value.</description>
        <inlineHelpText>This checkbox is for system use.  It is intended to be checked in conjunction with any insert/update of the Timecard Split executed within a future method, and will then ensure that no downstream future methods are called.</inlineHelpText>
        <label>Synchronous Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Notes__c</fullName>
        <label>Thursday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Timecard Split (Time Transaction)</relationshipLabel>
        <relationshipName>TimeForTimecardSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timecard_Header__c</fullName>
        <label>Timecard Header</label>
        <referenceTo>Timecard_Header__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>TimecardSplits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timecard_Notes__c</fullName>
        <label>Timecard Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Place-holder for Transaction apex</description>
        <label>Total Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Place-holder for Transaction apex</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days_Worked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Days Worked</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Fri__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Fri</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Mon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Mon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Sun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Thu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Thu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Tue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Tue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Wed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Wed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <formula>IF(OR(Travel_Sun__c,Travel_Mon__c,Travel_Tue__c,Travel_Wed__c,Travel_Thu__c,Travel_Fri__c,Travel_Sat__c),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Notes__c</fullName>
        <label>Tuesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Item</label>
        <referenceTo>Vendor_Invoice_Item__c</referenceTo>
        <relationshipLabel>Timecard Splits</relationshipLabel>
        <relationshipName>Timecard_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Notes__c</fullName>
        <label>Wednesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timecard Split</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource__c</columns>
        <columns>Project__c</columns>
        <columns>Assignment__c</columns>
        <columns>Timecard_Header__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Billable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{MM}-{DD}-{YYYY}-{000000}</displayFormat>
        <label>Timecard Split Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecard Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invoiced</fullName>
        <active>true</active>
        <description>Invoice Number or Date is not allowed on record unless it is invoiced</description>
        <errorConditionFormula>(Invoice_Number__c != null ||
Invoice_Date__c != null) &amp;&amp; Invoiced__c = false</errorConditionFormula>
        <errorMessage>Invoice Number or Date is not allowed on record unless it is invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Assignment_Proj_Mismatch</fullName>
        <active>true</active>
        <description>Timecard Split Project must match Assignment Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(Assignment__c)),(Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(Assignment__r.Project__c)),(Assignment__r.Project__c &lt;&gt; &apos;&apos;),(Project__c &lt;&gt; Assignment__r.Project__c))</errorConditionFormula>
        <errorDisplayField>Assignment__c</errorDisplayField>
        <errorMessage>Timecard Split Project must match Assignment Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Assignment_Res_Mismatch</fullName>
        <active>true</active>
        <description>Timecard Split Resource must match Assignment Resource.</description>
        <errorConditionFormula>AND(NOT(ISNULL(Assignment__c)),(Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(Assignment__r.Resource__c)),(Assignment__r.Resource__c &lt;&gt; &apos;&apos;),(Resource__c &lt;&gt; Assignment__r.Resource__c))</errorConditionFormula>
        <errorDisplayField>Assignment__c</errorDisplayField>
        <errorMessage>Timecard Split Resource must match Assignment Resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Bill_Date_Locking</fullName>
        <active>true</active>
        <description>Bill Date is locked if Billed or Invoiced.</description>
        <errorConditionFormula>AND(OR(AND(Billed__c,NOT(ISCHANGED(Billed__c))),AND(Invoiced__c,NOT(ISCHANGED(Invoiced__c)))),ISCHANGED(Bill_Date__c))</errorConditionFormula>
        <errorDisplayField>Bill_Date__c</errorDisplayField>
        <errorMessage>Bill Date is locked if Billed or Invoiced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Billing_Requires_Inclusion</fullName>
        <active>true</active>
        <description>For a Timecard Split to be marked as Billed, it must also be marked as Included in Financials and Approved.</description>
        <errorConditionFormula>AND(Billed__c,OR(NOT(Include_In_Financials__c),NOT(Approved__c)))</errorConditionFormula>
        <errorDisplayField>Billed__c</errorDisplayField>
        <errorMessage>For a Timecard Split to be marked as Billed, it must also be marked as Included in Financials and Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Invoice_Date_Locking</fullName>
        <active>true</active>
        <description>Invoice Date is locked if Invoiced.</description>
        <errorConditionFormula>AND(Invoiced__c,NOT(ISCHANGED(Invoiced__c)),ISCHANGED(Invoice_Date__c))</errorConditionFormula>
        <errorDisplayField>Invoice_Date__c</errorDisplayField>
        <errorMessage>Invoice Date is locked if Invoiced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Invoicing_Requires_Billing</fullName>
        <active>true</active>
        <description>For a Timecard Split to be marked as Invoiced, it must also be marked as Billed.</description>
        <errorConditionFormula>AND(Invoiced__c,NOT(Billed__c))</errorConditionFormula>
        <errorDisplayField>Invoiced__c</errorDisplayField>
        <errorMessage>For a Timecard Split to be marked as Invoiced, it must also be marked as Billed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TimecardSplit_Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Timecard Split Project must match Milestone Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(Milestone__c)),(Milestone__c &lt;&gt; &apos;&apos;),NOT(ISNULL(Milestone__r.Project__c)),(Milestone__r.Project__c &lt;&gt; &apos;&apos;),(Project__c &lt;&gt; Milestone__r.Project__c))</errorConditionFormula>
        <errorDisplayField>Milestone__c</errorDisplayField>
        <errorMessage>Timecard Split Project must match Milestone Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Timecard_Split_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Timecard Split&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked and Audit Notes are provided on the parent Timecard Header and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(Project__c),(Project__c=&apos;&apos;),AND(ISCHANGED(Project__c),OR(NOT(Timecard_Header__r.Admin_Global_Edit__c),ISNULL(Timecard_Header__r.Audit_Notes__c),ISBLANK(TRIM(Timecard_Header__r.Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>A Timecard Split&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked and Audit Notes are provided on the parent Timecard Header and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Timecard_Split_Requires_Assignment</fullName>
        <active>true</active>
        <description>Timecard Splits for this Project and/or Resource require an Assignment.  Only if the Project OR the Resource allows Timecards without Assignment can the Assignment be blank on the Timecard Split.</description>
        <errorConditionFormula>AND(NOT(Project__r.Allow_Timecards_Without_Assignment__c),NOT(Resource__r.Allow_Timecards_Without_Assignment__c),OR(ISNULL(Assignment__c),(Assignment__c = &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Timecard Splits for this Project and/or Resource require an Assignment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Timecard_Split_Resource_is_Constant</fullName>
        <active>true</active>
        <description>A Timecard Split&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked and Audit Notes are provided on the parent Timecard Header and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(Resource__c),(Resource__c=&apos;&apos;),AND(ISCHANGED(Resource__c),OR(NOT(Timecard_Header__r.Admin_Global_Edit__c),ISNULL(Timecard_Header__r.Audit_Notes__c),ISBLANK(TRIM(Timecard_Header__r.Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>Resource__c</errorDisplayField>
        <errorMessage>A Timecard Split&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked and Audit Notes are provided on the parent Timecard Header and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Invoice_Constant</fullName>
        <active>true</active>
        <description>The vendor invoice item cannot be changed once set.</description>
        <errorConditionFormula>AND(ISCHANGED(Vendor_Invoice_Item__c),LEN(PRIORVALUE(Vendor_Invoice_Item__c))&gt;0)</errorConditionFormula>
        <errorDisplayField>Vendor_Invoice_Item__c</errorDisplayField>
        <errorMessage>The vendor invoice item cannot be changed once set.</errorMessage>
    </validationRules>
</CustomObject>